# PanopticoVerde_Dashboard

./: .gitignore  README.md  ai-log.md  main.py  pyproject.toml
dashboard/: index.html  index.qmd  index.quarto_ipynb  index.quarto_ipynb_1
dashboard/.quarto/idx/: index.qmd.json
dashboard/.quarto/project-cache/: deno-kv-file
dashboard/.quarto/quarto-session-temp12e0772624556c91/: 5bbc791c06f6d588.scss  a0ea9986d5189fa4  f0dbcb0e51295cd0-89ea8055a26e2b59a6a6a2a53c795568.css
dashboard/.quarto/xref/: 061cb932  INDEX
dashboard/data_cache/: barrido_onu.csv  barrido_onu.json  barrido_wb.csv  metadata.json  onu_suicidio.csv
datos/: metadata.json
datos/datosODSInegi/: 10.2.1_dc_1522_es.csv  13r.3.1_dc_2266_es.csv  3.4.2.a_dc_2278_es.csv  5.5.2_dc_2233_es.csv  8.6.1c_dc_1840_es.csv  catalogo_ods_inegi.csv
docs/: index.html
docs/site_libs/bootstrap/: bootstrap-40941498dc52f43a884d2f08153ea66b.min.css  (+1 more)
notebooks/: Untitled.ipynb  barrido_onu.json  gini.csv  neet.csv  ods_explorer.ipynb  onu_3_4_2_484_2005_2023.json  onu_8_6_1_484_2005_2023.json  sdg_indicators.ipynb  wb_SI_POV_GINI_MEX_2005_2023.json  wb_SL_UEM_NEET_ZS_MEX_2000_2023.json
notebooks/.ipynb_checkpoints/: ods_explorer-checkpoint.ipynb
notebooks/data_cache/: barrido_onu.csv  barrido_wb.json  neet_f.csv  neet_m.csv  onu_neet.csv  wb_SH_DYN_MORT_MEX_2000_2023.json  wb_SI_POV_DDAY_MEX_2000_2023.json  wb_SI_POV_GINI_MEX_2000_2023.json  wb_SL_UEM_NEET_FE_ZS_MEX_2005_2023.json  wb_SL_UEM_NEET_MA_ZS_MEX_2005_2023.json  wb_SL_UEM_NEET_ZS_MEX_2005_2023.json  wb_SL_UEM_TOTL_ZS_MEX_2000_2023.json
(+5 files in other folders)
