[project]
name = "panopticoverdedashboard"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "notebook>=7.5.5",
    "pandas>=3.0.2",
    "plotly>=6.7.0",
    "quarto>=0.1.0",
    "shiny>=1.6.0",
    "shinywidgets>=0.8.0",
]
